--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -1,6 +1,6 @@
 $bgprimary: #000000;
 $bgsecondary: #101010;
-$color3: #383635;
+$color: #383635;
 $textsecondary: #939393;
 $textprimary: #ffffff;
 $levellight: #6fc13e;
