--- a/src/Components/Level/Level.module.scss
+++ b/src/Components/Level/Level.module.scss
@@ -1,94 +1,98 @@
 @import 'src/styles/colors';
-@import 'src/styles/test';
+@import 'src/styles/common';
 
 .wrapper {
   padding: 4px;
   width: 36px;
   height: 36px;
 
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  @include centered;
 
   border-radius: 100px;
+  color: $textprimary;
 
   div {
-    font-size: 20px;
+    font-size: 18px;
     font-weight: 700;
   }
 }
 
+.checked {
+  color: $textsecondary;
+  background-color: $textprimary;
+}
+
 .level-1 {
-  background: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='100' ry='100' stroke='%236fc13eFF' stroke-width='6' stroke-dasharray='12 108' stroke-dashoffset='0' stroke-linecap='butt'/%3e%3c/svg%3e"),
-    url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='100' ry='100' stroke='%23DC001CFF' stroke-width='5' stroke-dasharray='34 4' stroke-dashoffset='0' stroke-linecap='butt'/%3e%3c/svg%3e");
+  background: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='100' ry='100' stroke='%236fc13eFF' stroke-width='6' stroke-dasharray='6 108' stroke-dashoffset='0' stroke-linecap='butt'/%3e%3c/svg%3e"),
+    url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='100' ry='100' stroke='%23383635FF' stroke-width='5' stroke-dasharray='34 4' stroke-dashoffset='0' stroke-linecap='butt'/%3e%3c/svg%3e");
 }
 
 .level-2 {
-  background: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='100' ry='100' stroke='%236fc13eFF' stroke-width='6' stroke-dasharray='24 108' stroke-dashoffset='0' stroke-linecap='butt'/%3e%3c/svg%3e"),
-    url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='100' ry='100' stroke='%23DC001CFF' stroke-width='5' stroke-dasharray='34 4' stroke-dashoffset='0' stroke-linecap='butt'/%3e%3c/svg%3e");
+  background: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='100' ry='100' stroke='%236fc13eFF' stroke-width='6' stroke-dasharray='13 108' stroke-dashoffset='0' stroke-linecap='butt'/%3e%3c/svg%3e"),
+    url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='100' ry='100' stroke='%23383635FF' stroke-width='5' stroke-dasharray='34 4' stroke-dashoffset='0' stroke-linecap='butt'/%3e%3c/svg%3e");
 }
 
 .level-3 {
-  background: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='100' ry='100' stroke='%236fc13eFF' stroke-width='6' stroke-dasharray='36 108' stroke-dashoffset='0' stroke-linecap='butt'/%3e%3c/svg%3e"),
-    url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='100' ry='100' stroke='%23DC001CFF' stroke-width='5' stroke-dasharray='34 4' stroke-dashoffset='0' stroke-linecap='butt'/%3e%3c/svg%3e");
+  background: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='100' ry='100' stroke='%236fc13eFF' stroke-width='6' stroke-dasharray='20 108' stroke-dashoffset='0' stroke-linecap='butt'/%3e%3c/svg%3e"),
+    url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='100' ry='100' stroke='%23383635FF' stroke-width='5' stroke-dasharray='34 4' stroke-dashoffset='0' stroke-linecap='butt'/%3e%3c/svg%3e");
 }
 
 .level-4 {
-  background: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='100' ry='100' stroke='%23FF8E00FF' stroke-width='6' stroke-dasharray='34 4 12 100' stroke-dashoffset='0' stroke-linecap='butt'/%3e%3c/svg%3e"),
-    url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='100' ry='100' stroke='%23DC001CFF' stroke-width='5' stroke-dasharray='34 4' stroke-dashoffset='0' stroke-linecap='butt'/%3e%3c/svg%3e");
+  background: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='100' ry='100' stroke='%236fc13eFF' stroke-width='6' stroke-dasharray='27 108' stroke-dashoffset='0' stroke-linecap='butt'/%3e%3c/svg%3e"),
+    url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='100' ry='100' stroke='%23383635FF' stroke-width='5' stroke-dasharray='34 4' stroke-dashoffset='0' stroke-linecap='butt'/%3e%3c/svg%3e");
 }
 
 .level-5 {
-  background: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='100' ry='100' stroke='%23FF8E00FF' stroke-width='6' stroke-dasharray='34 4 24 100' stroke-dashoffset='0' stroke-linecap='butt'/%3e%3c/svg%3e"),
-    url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='100' ry='100' stroke='%23DC001CFF' stroke-width='5' stroke-dasharray='34 4' stroke-dashoffset='0' stroke-linecap='butt'/%3e%3c/svg%3e");
+  background: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='100' ry='100' stroke='%236fc13eFF' stroke-width='6' stroke-dasharray='34 108' stroke-dashoffset='0' stroke-linecap='butt'/%3e%3c/svg%3e"),
+    url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='100' ry='100' stroke='%23383635FF' stroke-width='5' stroke-dasharray='34 4' stroke-dashoffset='0' stroke-linecap='butt'/%3e%3c/svg%3e");
 }
 
-.test-level-1 {
-  background: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='100' ry='100' stroke='%236fc13eFF' stroke-width='6' stroke-dasharray='14 108' stroke-dashoffset='0' stroke-linecap='butt'/%3e%3c/svg%3e"),
-    url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='100' ry='100' stroke='%23DC001CFF' stroke-width='5' stroke-dasharray='34 4' stroke-dashoffset='0' stroke-linecap='butt'/%3e%3c/svg%3e");
+.level-6 {
+  background: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='100' ry='100' stroke='%23FF8E00FF' stroke-width='6' stroke-dasharray='34 4 6 108' stroke-dashoffset='0' stroke-linecap='butt'/%3e%3c/svg%3e"),
+    url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='100' ry='100' stroke='%23383635FF' stroke-width='5' stroke-dasharray='34 4' stroke-dashoffset='0' stroke-linecap='butt'/%3e%3c/svg%3e");
 }
 
-.test-level-1 {
-  background: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='100' ry='100' stroke='%236fc13eFF' stroke-width='6' stroke-dasharray='14 108' stroke-dashoffset='0' stroke-linecap='butt'/%3e%3c/svg%3e"),
-    url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='100' ry='100' stroke='%23DC001CFF' stroke-width='5' stroke-dasharray='34 4' stroke-dashoffset='0' stroke-linecap='butt'/%3e%3c/svg%3e");
+.level-7 {
+  background: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='100' ry='100' stroke='%23FF8E00FF' stroke-width='6' stroke-dasharray='34 4 13 108' stroke-dashoffset='0' stroke-linecap='butt'/%3e%3c/svg%3e"),
+    url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='100' ry='100' stroke='%23383635FF' stroke-width='5' stroke-dasharray='34 4' stroke-dashoffset='0' stroke-linecap='butt'/%3e%3c/svg%3e");
 }
 
-.test-level-1 {
-  background: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='100' ry='100' stroke='%236fc13eFF' stroke-width='6' stroke-dasharray='14 108' stroke-dashoffset='0' stroke-linecap='butt'/%3e%3c/svg%3e"),
-    url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='100' ry='100' stroke='%23DC001CFF' stroke-width='5' stroke-dasharray='34 4' stroke-dashoffset='0' stroke-linecap='butt'/%3e%3c/svg%3e");
+.level-8 {
+  background: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='100' ry='100' stroke='%23FF8E00FF' stroke-width='6' stroke-dasharray='34 4 20 108' stroke-dashoffset='0' stroke-linecap='butt'/%3e%3c/svg%3e"),
+    url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='100' ry='100' stroke='%23383635FF' stroke-width='5' stroke-dasharray='34 4' stroke-dashoffset='0' stroke-linecap='butt'/%3e%3c/svg%3e");
 }
 
-.test-level-1 {
-  background: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='100' ry='100' stroke='%236fc13eFF' stroke-width='6' stroke-dasharray='14 108' stroke-dashoffset='0' stroke-linecap='butt'/%3e%3c/svg%3e"),
-    url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='100' ry='100' stroke='%23DC001CFF' stroke-width='5' stroke-dasharray='34 4' stroke-dashoffset='0' stroke-linecap='butt'/%3e%3c/svg%3e");
+.level-9 {
+  background: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='100' ry='100' stroke='%23FF8E00FF' stroke-width='6' stroke-dasharray='34 4 27 108' stroke-dashoffset='0' stroke-linecap='butt'/%3e%3c/svg%3e"),
+    url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='100' ry='100' stroke='%23383635FF' stroke-width='5' stroke-dasharray='34 4' stroke-dashoffset='0' stroke-linecap='butt'/%3e%3c/svg%3e");
 }
 
-.test-level-1 {
-  background: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='100' ry='100' stroke='%236fc13eFF' stroke-width='6' stroke-dasharray='14 108' stroke-dashoffset='0' stroke-linecap='butt'/%3e%3c/svg%3e"),
-    url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='100' ry='100' stroke='%23DC001CFF' stroke-width='5' stroke-dasharray='34 4' stroke-dashoffset='0' stroke-linecap='butt'/%3e%3c/svg%3e");
+.level-10 {
+  background: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='100' ry='100' stroke='%23FF8E00FF' stroke-width='6' stroke-dasharray='34 4 34 108' stroke-dashoffset='0' stroke-linecap='butt'/%3e%3c/svg%3e"),
+    url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='100' ry='100' stroke='%23383635FF' stroke-width='5' stroke-dasharray='34 4' stroke-dashoffset='0' stroke-linecap='butt'/%3e%3c/svg%3e");
 }
 
-.test-level-1 {
-  background: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='100' ry='100' stroke='%236fc13eFF' stroke-width='6' stroke-dasharray='14 108' stroke-dashoffset='0' stroke-linecap='butt'/%3e%3c/svg%3e"),
-    url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='100' ry='100' stroke='%23DC001CFF' stroke-width='5' stroke-dasharray='34 4' stroke-dashoffset='0' stroke-linecap='butt'/%3e%3c/svg%3e");
+.level-11 {
+  background: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='100' ry='100' stroke='%23DC001CFF' stroke-width='6' stroke-dasharray='34 4 34 4 6' stroke-dashoffset='0' stroke-linecap='butt'/%3e%3c/svg%3e"),
+    url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='100' ry='100' stroke='%23383635FF' stroke-width='5' stroke-dasharray='34 4' stroke-dashoffset='0' stroke-linecap='butt'/%3e%3c/svg%3e");
 }
 
-.test-level-1 {
-  background: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='100' ry='100' stroke='%236fc13eFF' stroke-width='6' stroke-dasharray='14 108' stroke-dashoffset='0' stroke-linecap='butt'/%3e%3c/svg%3e"),
-    url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='100' ry='100' stroke='%23DC001CFF' stroke-width='5' stroke-dasharray='34 4' stroke-dashoffset='0' stroke-linecap='butt'/%3e%3c/svg%3e");
+.level-12 {
+  background: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='100' ry='100' stroke='%23DC001CFF' stroke-width='6' stroke-dasharray='34 4 34 4 13' stroke-dashoffset='0' stroke-linecap='butt'/%3e%3c/svg%3e"),
+    url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='100' ry='100' stroke='%23383635FF' stroke-width='5' stroke-dasharray='34 4' stroke-dashoffset='0' stroke-linecap='butt'/%3e%3c/svg%3e");
 }
 
-.test-level-1 {
-  background: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='100' ry='100' stroke='%236fc13eFF' stroke-width='6' stroke-dasharray='14 108' stroke-dashoffset='0' stroke-linecap='butt'/%3e%3c/svg%3e"),
-    url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='100' ry='100' stroke='%23DC001CFF' stroke-width='5' stroke-dasharray='34 4' stroke-dashoffset='0' stroke-linecap='butt'/%3e%3c/svg%3e");
+.level-13 {
+  background: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='100' ry='100' stroke='%23DC001CFF' stroke-width='6' stroke-dasharray='34 4 34 4 20' stroke-dashoffset='0' stroke-linecap='butt'/%3e%3c/svg%3e"),
+    url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='100' ry='100' stroke='%23383635FF' stroke-width='5' stroke-dasharray='34 4' stroke-dashoffset='0' stroke-linecap='butt'/%3e%3c/svg%3e");
 }
 
-.test-level-1 {
-  background: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='100' ry='100' stroke='%236fc13eFF' stroke-width='6' stroke-dasharray='14 108' stroke-dashoffset='0' stroke-linecap='butt'/%3e%3c/svg%3e"),
-    url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='100' ry='100' stroke='%23DC001CFF' stroke-width='5' stroke-dasharray='34 4' stroke-dashoffset='0' stroke-linecap='butt'/%3e%3c/svg%3e");
+.level-14 {
+  background: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='100' ry='100' stroke='%23DC001CFF' stroke-width='6' stroke-dasharray='34 4 34 4 27' stroke-dashoffset='0' stroke-linecap='butt'/%3e%3c/svg%3e"),
+    url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='100' ry='100' stroke='%23383635FF' stroke-width='5' stroke-dasharray='34 4' stroke-dashoffset='0' stroke-linecap='butt'/%3e%3c/svg%3e");
 }
 
-.test-level-1 {
-  background: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='100' ry='100' stroke='%236fc13eFF' stroke-width='6' stroke-dasharray='14 108' stroke-dashoffset='0' stroke-linecap='butt'/%3e%3c/svg%3e"),
-    url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='100' ry='100' stroke='%23DC001CFF' stroke-width='5' stroke-dasharray='34 4' stroke-dashoffset='0' stroke-linecap='butt'/%3e%3c/svg%3e");
+.level-15 {
+  background: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='100' ry='100' stroke='%23DC001CFF' stroke-width='6' stroke-dasharray='34 4 34 4 34' stroke-dashoffset='0' stroke-linecap='butt'/%3e%3c/svg%3e"),
+    url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='100' ry='100' stroke='%23383635FF' stroke-width='5' stroke-dasharray='34 4' stroke-dashoffset='0' stroke-linecap='butt'/%3e%3c/svg%3e");
 }
