fetch data by pages

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
 
 body {
   margin: 0;
+  background-color: #000000;
   width: 100%;
   font-family: 'Montserrat';
   -webkit-font-smoothing: antialiased;
