--- a/src/styles/breakpoints.scss
+++ b/src/styles/breakpoints.scss
@@ -58,3 +58,9 @@ $screen-xl-max: 1920px;
     @content;
   }
 }
+
+@mixin custom-width($size) {
+  @media (max-width: #{$size}) {
+    @content;
+  }
+}
